syntax = "proto3";
package model;

option go_package = "github.com/connet-dev/connet/proto/pbmodel";

message Addr {
  bytes v4 = 1;
  bytes v6 = 2;
}

message AddrPort {
  Addr addr = 1;
  uint32 port = 2; // really uint16, but not a thing in protobuf
}

message HostPort {
  string host = 1;
  uint32 port = 2;
}

message Endpoint {
  string name = 1;
}

enum Role {
  RoleUnknown = 0;
  RoleDestination = 1;
  RoleSource = 2;
}
